# claude-bash-guard

./: Makefile  README.md  pyproject.toml
.claude/commands/: update-rules.md
src/bash_guard/: __init__.py  cli.py  evaluator.py  hook_io.py  installer.py  llm_judge.py  logger.py  rule_engine.py
src/bash_guard/rules/: allow.toml  deny.toml
src/claude_sentinel/: __init__.py  analyzer.py  applier.py  cli.py  command_normalizer.py  evaluator.py  hook_io.py  installer.py  llm_judge.py  logger.py  rule_engine.py  suggester.py
src/claude_sentinel/rules/: allow.toml  ask.toml  deny.toml  llm_prompt.txt  suggest_prompt.txt
tests/: test_analyzer.py  test_applier.py  test_cli.py  test_command_normalizer.py  test_evaluator.py  test_hook_io.py  test_installer.py  test_llm_judge.py  test_logger.py  test_rules.py  test_suggester.py
