[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-sentinel"
version = "2026.03.21"
description = "Claude Code hook for evaluating tool permission requests"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0",
]

[project.scripts]
claude-sentinel = "claude_sentinel.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_sentinel"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
