[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-sentinel"
version = "2026.04.18.1"
description = "Claude Code hook for evaluating tool permission requests"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0",
]

[project.scripts]
claude-sentinel = "claude_sentinel.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_sentinel"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pyright>=1.1",
    "pytest>=9.0.2",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
